--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=mymongodb
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
-
+spring.data.mongodb.uri=mongodb://root:admin@localhost/mymongodb?authSource=admin
 spring.data.mongodb.authentication-database=admin
